<resources>
    <string name="app_name">RxLearning</string>
    <string name="title_activity_display">DisplayActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="fragment_1">Example 1</string>
    <string name="fragment_2">Example 2</string>
    <string name="fragment_create">Creating Observables</string>
    <string name="fragment_filter">Filtering Observables</string>
    <string name="fragment_transform">Transforming Observables</string>
    <string name="fragment_combine">Combining Observables</string>
    <!--Creating-->
    <string name="menu_create">create</string>
    <string name="menu_from">fromIterable</string>
    <string name="menu_just">just</string>
    <string name="menu_repeat">repeat</string>
    <string name="menu_range">range</string>
    <string name="menu_timer">timer</string>
    <string name="menu_interval">interval</string>
    <!--Filter-->
    <string name="menu_filter">filter</string>
    <string name="menu_take">take</string>
    <string name="menu_take_last">takeLast</string>
    <string name="menu_distinct">distinct</string>
    <string name="menu_first">first</string>
    <string name="menu_skip">skip</string>
    <string name="menu_element_at">elementAt</string>
    <!--Transform-->
    <string name="menu_map">map</string>
    <string name="menu_scan">scan</string>
    <string name="menu_group_by">groupBy</string>
    <!--Combine-->
    <string name="menu_merge">merge</string>
    <string name="menu_zip">zip</string>
    <string name="menu_join">join</string>
    <string name="menu_combine_latest">combineLatest</string>
</resources>
