<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/menu_create"
        android:title="@string/menu_create"
        app:showAsAction="never" />

    <item
        android:id="@+id/menu_from"
        android:title="@string/menu_from"
        app:showAsAction="never" />

    <item
        android:id="@+id/menu_just"
        android:title="@string/menu_just"
        app:showAsAction="never" />

    <item
        android:id="@+id/menu_repeat"
        android:title="@string/menu_repeat"
        app:showAsAction="never" />

    <item
        android:id="@+id/menu_range"
        android:title="@string/menu_range"
        app:showAsAction="never" />
    <item
        android:id="@+id/menu_timer"
        android:title="@string/menu_timer"
        app:showAsAction="never" />

    <item
        android:id="@+id/menu_interval"
        android:title="@string/menu_interval"
        app:showAsAction="never" />

</menu>