<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/fragment_creating"
        android:orderInCategory="100"
        android:title="@string/fragment_create"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/fragment_filtering"
        android:orderInCategory="100"
        android:title="@string/fragment_filter"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/fragment_transforming"
        android:orderInCategory="100"
        android:title="@string/fragment_transform"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/fragment_combining"
        android:orderInCategory="100"
        android:title="@string/fragment_combine"
        app:showAsAction="ifRoom"/>

</menu>